@@ -1,2 +1,0 @@
-#DEP  src/erl-tools/gmt-bom                  *
-#DEP  src/erl-tools/ubf                      *
