@@ -6,43 +6,37 @@ Bert-RPC.  This repository depends on the ubf open source repository.
 To download
 ===========
 
-1. Get and install Git
-   http://git-scm.com/
+1. Get and install Repo
 
-  and then append the following lines to your ~/.gitconfig file:
+    $ curl http://android.git.kernel.org/repo > ~/bin/repo
+    $ chmod a+x ~/bin/repo
 
-    [url "git://github.com/norton/gmt-bom.git"]
-         insteadOf = git://github.com/norton/src/erl-tools/gmt-bom.git
-    [url "git://github.com/norton/ubf.git"]
-         insteadOf = git://github.com/norton/src/erl-tools/ubf.git
-    [url "git://github.com/norton/ubf-bertrpc.git"]
-         insteadOf = git://github.com/norton/src/erl-tools/ubf-bertrpc.git
+2. Create working directory
 
-  NOTE: UBF requires git version 1.7.x or newer.  UBF has been tested
-  most recently with git version 1.7.1.1.
+    $ mkdir working-directory-name
+    $ cd working-directory-name
+    $ repo init -u git://github.com/norton/manifests.git -m ubf-bertrpc-default.xml
 
-2. Download the 'bom.sh' tool and then download UBF
+3. Download Git repositories
 
-    $ mkdir -p ~/work/ubf-bertrpc
-    $ cd ~/work/ubf-bertrpc
-    $ git clone git://github.com/norton/bom.git .
-    $ env BOM_GIT=git://github.com/norton/ \
-      ./bom.sh co src/erl-tools/ubf-bertrpc
+    $ cd working-directory-name
+    $ repo sync
 
-  NOTE: The Bill of Materials (BOM) system is a way to manage the
-  builds of heterogeneous products with shared components using GIT,
-  GIT-SVN, SVN, or CVS.  BOM maintains hierarchical dependencies
-  between modules stored in a source code repository.  BOM is
-  implemented using bash, make, and other UNIX tools.
+For futher information and help for related tools, please refer to the
+following links:
 
-  NOTE: The bom.sh commands 'diff' and 'status' can be used to check
-  the differences and status of all components, respectively.  Type
-  './bom.sh help' for further information.
-
-  NOTE: The BOM system was originally developed by Gemini Mobile
-  Technologies as an in-house tool to build and to package it's own
-  commercial products.  BOM as been open-sourced as one of the helper
-  tools for UBF.
+- Erlang - http://www.erlang.org/
+  * *R14B01 has been tested most recently*
+  * *R13B01 or newer*
+- Git - http://git-scm.com/
+  * *Git 1.5.4 or newer*
+  * _required for Repo and GitHub_
+- GitHub - https://github.com
+- Python - http://www.python.org
+  * *Python 2.4 or newer (CAUTION: Python 3.x might be too new)*
+  * _required for Repo_
+- Rebar - https://github.com/basho/rebar/wiki
+- Repo - http://source.android.com/source/git-repo.html
 
 
 To build - basic recipe
@@ -51,62 +45,42 @@ To build - basic recipe
 1. Get and install an erlang system
    http://www.erlang.org
 
-   NOTE: UBF requires Erlang/OTP R13B01 or newer.  UBF has been tested
-   most recently with Erlang/OTP R13B04.
+2. Build UBF
+   $ cd working-directory-name/src
+   $ make compile
 
-2. Change to your working directory and create the top-level Makefile
-   $ cd ~/work/ubf-bertrpc
-   $ ./bom.sh make
-
-3. Build UBF
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl
-     OR
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl DEBUG="+debug_info"
-
-   NOTE: Please specify the path to your erlang system's erl
-   executable.
-
-   NOTE: DEBUG="+debug_info" will produce DEBUG enabled beam files.
-
-4. Run the unit tests
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl test
+3. Run the unit tests
+   $ cd working-directory-name/src
+   $ make eunit
 
 
 To build - optional features
 ============================
 
-A. Run unit test for one module.
+A. Dialyzer Testing _basic recipe_
 
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
-     DEBUG="+debug_info" \
-     -C src/erl-tools/ubf-bertrpc__HEAD/src check
+   A.1. Build Dialyzer's PLT _(required once)_
 
-B. Clean one module
+   $ cd working-directory-name/src
+   $ make build-plt
 
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
-     DEBUG="+debug_info" \
-     -C src/erl-tools/ubf-bertrpc__HEAD/src clean
+   TIP: Check Makefile and dialyzer's documentation for further
+   information.
 
-C. Rebuild one module
+   A.2. Dialyze without specs
 
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
-     DEBUG="+debug_info" \
-     -C src/erl-tools/ubf-bertrpc__HEAD/src
+   $ cd working-directory-name/src
+   $ make dialyze
 
-D. Generate EDocs for one module
+   CAUTION: If you manually run dialyzer with the "-r" option, execute
+   "make clean compile" first to avoid finding duplicate beam files
+   underneath rebar's .eunit directory.  Check Makefile for further
+   information.
 
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
-     DEBUG="+debug_info" \
-     -C src/erl-tools/ubf-bertrpc__HEAD/src edoc
+   A.3. Dialyze with specs
 
-E. Run dialyzer for one module (and it dependencies)
-
-   $ make ERL=/usr/local/hibari/ert/R13B04/bin/erl \
-     DEBUG="+debug_info" \
-     -C src/erl-tools/ubf-bertrpc__HEAD/src run-dialyzer
-
-   NOTE: Dialyzer will not work unless all beam files have been
-   compiled with debug information.
+   $ cd working-directory-name/src
+   $ make dialyze-spec
 
 
 Documentation -- Where should I start?
@@ -115,8 +89,8 @@ Documentation -- Where should I start?
 This README is a good first step.  Check out and build using the "To
 build" instructions above.
 
-Eunit tests can be found in the Unit-EUnit-Files directory.  These
-tests illustrate a generic module that uses UBF's contract manager for
+Eunit tests can be found in the test/eunit directory.  These tests
+illustrate a generic module that uses UBF's contract manager for
 checking Bert-RPC requests and responses.
 
 
