@@ -1,3 +1,0 @@
-{application,'ubf-bertrpc__HEAD'}.
-{packages,[]}.
-{modules,[ubf_bertrpc_plugin]}.
