@@ -1,12 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>The ubf-bertrpc__HEAD application</title>
-<link rel="stylesheet" type="text/css" href="stylesheet.css" title="EDoc">
-</head>
-<body bgcolor="white">
-<h2 class="indextitle">Modules</h2>
-<table width="100%" border="0" summary="list of modules">
-<tr><td><a href="ubf_bertrpc_plugin.html" target="overviewFrame" class="module">ubf_bertrpc_plugin</a></td></tr></table>
-</body>
-</html>
