@@ -1,73 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>Module ubf_bertrpc_plugin</title>
-<link rel="stylesheet" type="text/css" href="stylesheet.css" title="EDoc">
-</head>
-<body bgcolor="white">
-<div class="navbar"><a name="#navbar_top"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
-<hr>
-
-<h1>Module ubf_bertrpc_plugin</h1>
-<ul class="index"><li><a href="#description">Description</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>Sample BERT-RPC contract.
-
-
-<h2><a name="description">Description</a></h2><p>Sample BERT-RPC contract.</p>
-  
-  
-<h2><a name="index">Function Index</a></h2>
-<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#description-0">description/0</a></td><td></td></tr>
-<tr><td valign="top"><a href="#handlerEvent-1">handlerEvent/1</a></td><td></td></tr>
-<tr><td valign="top"><a href="#handlerRpc-1">handlerRpc/1</a></td><td>rpc handler
-  handlerRpc(Event) -&gt;.</td></tr>
-<tr><td valign="top"><a href="#handlerStart-1">handlerStart/1</a></td><td>start handler.</td></tr>
-<tr><td valign="top"><a href="#handlerStop-3">handlerStop/3</a></td><td>stop handler.</td></tr>
-<tr><td valign="top"><a href="#info-0">info/0</a></td><td></td></tr>
-<tr><td valign="top"><a href="#keepalive-0">keepalive/0</a></td><td></td></tr>
-</table>
-
-<h2><a name="functions">Function Details</a></h2>
-
-<h3 class="function"><a name="description-0">description/0</a></h3>
-<div class="spec">
-<p><tt>description() -&gt; any()</tt></p>
-</div>
-
-<h3 class="function"><a name="handlerEvent-1">handlerEvent/1</a></h3>
-<div class="spec">
-<p><tt>handlerEvent(Event) -&gt; any()</tt></p>
-</div>
-
-<h3 class="function"><a name="handlerRpc-1">handlerRpc/1</a></h3>
-<div class="spec">
-<p><tt>handlerRpc(Event::any()) -&gt; Reply::any()</tt></p>
-</div><p>rpc handler
-  handlerRpc(Event) -&gt;</p>
-<p><b><font color="red">To do</font></b><ul><li><font color="red">Implement BERT-RPC 1.0 synchronous events
-  todo;</font></li></ul></p>
-
-<h3 class="function"><a name="handlerStart-1">handlerStart/1</a></h3>
-<div class="spec">
-<p><tt>handlerStart(Args::list(any())) -&gt; {accept, Reply::any(), StateName::atom(), StateData::term()} | {reject, Reason::any()}</tt></p>
-</div><p>start handler</p>
-
-<h3 class="function"><a name="handlerStop-3">handlerStop/3</a></h3>
-<div class="spec">
-<p><tt>handlerStop(Pid::pid(), Reason::any(), StateData::term()) -&gt; <a href="#type-void">void()</a></tt></p>
-</div><p>stop handler</p>
-
-<h3 class="function"><a name="info-0">info/0</a></h3>
-<div class="spec">
-<p><tt>info() -&gt; any()</tt></p>
-</div>
-
-<h3 class="function"><a name="keepalive-0">keepalive/0</a></h3>
-<div class="spec">
-<p><tt>keepalive() -&gt; any()</tt></p>
-</div>
-<hr>
-
-<div class="navbar"><a name="#navbar_bottom"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
-<p><i>Generated EDoc, $Id$</i></p>
-</body>
-</html>
