@@ -1,0 +1,10 @@
+%%% -*- mode: erlang -*-
+
+%% Erlang compiler options
+{erl_opts, [debug_info, fail_on_warning
+            , {i, "./priv/"}
+            , {i, "../ubf/include/"}
+           ]}.
+
+%% EUnit options
+{eunit_opts, [verbose]}.
